k8s/deployment-3002.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node3002
spec:
  selector:
    matchLabels:
      app: node3002
  template:
    metadata:
      labels:
        app: node3002
    spec:
      containers:
        - name: node3002
          image: conditional-port-dock
          # resources:
          #   limits:
          #     memory: "256Mi"
          #     cpu: "500m"
          ports:
            - containerPort: 3002
      restartPolicy: OnFailure
