k8s/deployment-5000.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node5000
spec:
  selector:
    matchLabels:
      app: node3001
    template:
      metadata:
        labels:
          app: node5000
      spec:
        containers:
          - name: internal-server-node5000
            image: conditional-port-dock
            ports:
              - containerPort: 5000
            command: ["node"]
            args: ["internal_server.js"]
        restartPolicy: OnFailure
