k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node3001
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths: 
      - path: /server1
        pathType: Prefix
        backend:
          service:
            name: node3001
            port:
              number: 3001

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node3002
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths: 
      - path: /server2
        pathType: Prefix
        backend:
          service:
            name: node3002
            port:
              number: 3002
