k8s/virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node3001
spec:
  hosts:
  - "templater.us"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        exact: "/server1" #TODO: look into exact and prefix
    route:
    - destination:
        port:
          number: 3001
        host: tls-node3001 #destination service

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node3002
spec:
  hosts:
  - "templater.us"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        exact: "/server2" #TODO: look into exact and prefix
    route:
    - destination:
        port:
          number: 3002
        host: tls-node3002
